Regression - cannot write uvs to new bmesh loops uv layer. #106430

Closed
opened 2023-04-01 14:47:25 +02:00 by Jose Conseco · 5 comments

System Information
Operating system: Linux-6.1.21-1-MANJARO-x86_64-with-glibc2.37 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b
Worked: 3.4

Short description of error
In blender 3.4 we could use:

new_uv_lay = bm.loops.layers.uv.new('test')
for face in bm.faces:
    for loop in face.loops:
        loop[new_uv_lay].uv = (0.5, 0.5)

To create and write to new_uv_lay. In Blender 3.5 layer is created, but uvs are written to active layer, rather than to the new new_uv_lay one.
I think this issue was introduced during 3.5 uvs rewrite.
Exact steps for others to reproduce the error

  1. Run script in attached file - in blender 3.5
  2. New uv layer 'test' is created, but uvs coordinates are written to first/active layer, rather than to the 'test' uv.
**System Information** Operating system: Linux-6.1.21-1-MANJARO-x86_64-with-glibc2.37 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Worked: 3.4 **Short description of error** In blender 3.4 we could use: ```py new_uv_lay = bm.loops.layers.uv.new('test') for face in bm.faces: for loop in face.loops: loop[new_uv_lay].uv = (0.5, 0.5) ``` To create and write to new_uv_lay. In Blender 3.5 layer is created, but uvs are written to active layer, rather than to the new `new_uv_lay` one. I think this issue was introduced during 3.5 uvs rewrite. **Exact steps for others to reproduce the error** 1. Run script in attached file - in blender 3.5 2. New uv layer 'test' is created, but uvs coordinates are written to first/active layer, rather than to the 'test' uv.
Jose Conseco added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-01 14:47:26 +02:00
Member

Can confirm the issue. Verified the new() call returns correct new uv map, but it seems that when writing it's always written to the first one. Namely Float2, not sure why. Could be caused by the new mesh data structure migration where MLOOPUV became a Float2 but can't seem to find the root cause.

Can confirm the issue. Verified the `new()` call returns correct new uv map, but it seems that when writing it's always written to the first one. Namely `Float2`, not sure why. Could be caused by the new mesh data structure migration where `MLOOPUV` became a `Float2` but can't seem to find the root cause.
YimingWu added
Module
Python API
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-02 08:48:59 +02:00
Member

@ChengduLittleA : if this is a (recent) regression, it should be set to High priority.

@ChengduLittleA : if this is a (recent) regression, it should be set to High priority.
Philipp Oeser added
Module
Modeling
Priority
High
and removed
Module
Python API
Priority
Normal
labels 2023-04-03 10:39:52 +02:00
Member

I see. I'll do that. Thanks @lichtwerk

I see. I'll do that. Thanks @lichtwerk
Member

@Baardaap might be interested.

@Baardaap might be interested.
Martijn Versteegh self-assigned this 2023-04-03 16:50:21 +02:00

I think I have a vague outline of a fix in my head. After sleeping on it I'll try to implement it tomorrow.

I think I have a vague outline of a fix in my head. After sleeping on it I'll try to implement it tomorrow.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-04 18:12:10 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-04-05 17:49:40 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106430
No description provided.