Fix #106430: Index the right UVmap in BMesh

When accessing UVmaps from python in BMesh, the UVmap name/index was ignored
and the active UVmap always used. This fixes this by passing the layer index
to the underlying CustomData function.

Pull Request: https://projects.blender.org/blender/blender/pulls/106537